@@ -1,3 +1,12 @@
+2025-09-30T00:54:03Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18115101310 # 782
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-30
+* notice: last 14d: unq all: 5 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 194 261 / 200 267
+* notice: next accum: outdated-unq outdated-all / unq all: 195 262 / 200 267
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-09-15] / []
+
 2025-09-27T00:51:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18052682674 # 779
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-27
